fixes button background on firefox/old chrome

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -37,6 +37,7 @@ header {
   .view-palettes-btn {
     color: #333;
     position: absolute;
+    background: #FFF;
     border: none;
     top: 20px;
     right: 10px;
@@ -145,6 +146,7 @@ header {
   font-size: 20pt;
   font-family: 'Oswald', sans-serif;
   border-radius: 10px;
+  background: #FFF;
   border: none;
   padding: 5px;
   width: 600px;
